@@ -1,0 +1,37 @@
+Non-MMD3 playback ignores odd loop params
+OctaMED Soundstudio MMD2
+1 4 4 3 3 3 20 1 0 64
+0
+64 1 0 Loop length 31
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 12 12 12 12 12 12 12 12 12 12 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 36 0 0 0 0 0 0 0 0 0 0 0 0
+64 1 0 Loop length 30
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 12 12 12 12 12 12 12 12 12 12 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 36 0 0 0 0 0 0 1 0 0 0 0 0
+64 1 0 Loop start 1
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 12 12 12 12 12 12 12 12 12 12 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 36 0 0 0 0 0 0 2 0 0 0 0 0
+8 0 1 2 3
+8 b0509e0cdb5a4d912f7ff51a84bfcb68
+8 6a622d86cfa027e7e11a2fa77e2f428d
+8 3b5d3c7d207e37dceeedd301e35e2e58
+8 3b5d3c7d207e37dceeedd301e35e2e58
+32 0 30 2 0684f8984bc85966e09269fb46500f8a 
+32 0 30 2 0684f8984bc85966e09269fb46500f8a 
+32 0 30 2 0684f8984bc85966e09269fb46500f8a 
+128 64 0
+128 64 0
+128 64 0
+128 64 0
